# video_structure_transform

./: README.md  s -ExecutionPolicy RemoteSigned) ; (& sProjectvideo_structure_transformbackend.venvScriptsActivate.ps1)  skills-lock.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/my-video/: DESIGN.md  SCRIPT.md  STORYBOARD.md  gen_voice.py  generator.ipynb  index.html  meta.json  narration.txt  package.json  run_pipeline.js  transcript.json
backend/my-video/.waveform-cache/: v2_narration.wav.json  v2_temp_audio.wav.json
backend/my-video/compositions/: beat-1-hook-opening.html  beat-1-hook.html  beat-1.html  beat-2-hook-question.html  beat-2-story.html  beat-2.html  beat-3-climax.html  beat-3-proof.html  beat-3-value-cards.html  beat-3.html  beat-4-cta.html  beat-4-proof.html  beat-4-story-build.html  beat-4.html  beat-5-cta.html  beat-5-punchline-11yi.html  beat-5.html  beat-6-proof-scroll.html  beat-7-cta-conclusion.html
backend/my-video/scripts/: script.js
backend/notebooks/: main.ipynb  main.py  main1.ipynb  test_api.ipynb  test_audio_separation.ipynb  test_extract_music_features.ipynb  test_keyframes_extraction.ipynb  test_structure_extraction.ipynb
backend/output/: 抖音2026529-207530_structure.json
backend/src/: core.py  main.py  models.py  prompts.py  utils.py  video.py
backend/src/pipeline/: design_generator.py  script_template_generator.py  template_meta_generator.py
