[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ipywidgets>=8.1.8"]
