[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.3",
    "ffmpeg-python>=0.2.0",
    "gtts>=2.5.4",
    "moviepy>=2.2.1",
    "openai>=2.38.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "scenedetect>=0.7",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ipywidgets>=8.1.8"]

[tool.ruff]
select = ["I", "UP", "E", "F", "W", "C90"]
